[package]
name = "arrpc-derive"
description = "Macros for ARRPC"
authors = ["Jay Jeyaruban <jayjeyaruban@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/JayJeyaruban/arrpc"
homepage = "https://github.com/JayJeyaruban/arrpc"
readme = "README.md"
license = "MIT"

[dependencies]
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["full"] }
convert_case = "0.6.0"
proc-macro-error = "1.0.4"
itertools = { version = "0.12.1" }

# Optional
semver = { version = "1.0.22", optional = true }

# Workspace dependencies

[features]
default = []
obake = ["dep:semver"]


[lib]
proc-macro = true
